--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">DiceGameApp</string>
+    <string name="app_name">Dice Game</string>
+    <string name="item_settings">Settings</string>
+    <string name="item_about">About</string>
+    <string name="about_text">This APP has been produced by Albert exclusively for non-profit use. Please, play responsible and enjoy it!</string>
+
 </resources>
