--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Dice Game</string>
+    <string name="app_name">Dices Game</string>
     <string name="item_settings">Settings</string>
     <string name="item_about">About</string>
     <string name="about_text">This APP has been produced by Albert exclusively for non-profit use. Please, play responsible and enjoy it!</string>
