--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,11 @@
     <string name="item_settings">Settings</string>
     <string name="item_about">About</string>
     <string name="about_text">This APP has been produced by Albert exclusively for non-profit use. Please, play responsible and enjoy it!</string>
+    <string name="text_SelectUser">Choose a player to play with</string>
+    <string name="text_RegisterUser">Create a new user by providing a Username</string>
+    <string name="text_Ranking">Hall Of Fame</string>
+    <string name="hint_Username">What\'s your UserName?</string>
+    <string name="example_Username">Username Example</string>
+    <string name="example_Description">This is a description example. Have a nice day!</string>
 
 </resources>
